--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,15 +1,20 @@
 .cover__background {
     box-sizing: border-box;
-    /* width: 1184px; */
-    /* background-repeat: no-repeat; */
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     z-index: -2;
-    max-width: 100%;
+    width: 100%;
     height: 100%;
-    /* width: 100%; */
     object-fit: cover;
+    display: block;
 }
+
+  @media screen and (max-width: 399px) {
+    .cover__background {
+      min-width: 320px;
+      min-height: 200px;
+    }
+  }
