--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,5 +1,5 @@
 .footer__link {
-    margin: 0 14px 0 0;
+    margin: 0 18px 0 0;
     padding: 0;
     text-decoration: none;
     color: white;
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 767px) {
     .footer__link {
-        margin: 0 0 32px 0;
+        margin-right: 0;
         min-width: 186px;
     }
   }
