--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
-    /* width: 100%; */
+    width: 100%;
     /* max-width: 1184px; */
-    min-width: 1184px;
+    /* min-width: 1184px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -11,21 +11,24 @@
 
 @media screen and (max-width: 1279px) {
     .header {
-        min-width: 928px;
+        width: calc(100% - 2*48px);
+        margin-left: 48px;
+        margin-right: 48px;        
     }
   }
 
   @media screen and (max-width: 1023px) {
     .header {
-        min-width: 720px;
-        padding-left: 24px;
-        padding-right: 24px;
+        width: calc(100% - 2*24px);
+        margin-left: 24px;
+        margin-right: 24px;
     }
   }
 
   @media screen and (max-width: 767px) {
     .header {
         min-width: 288px;
+        width: calc(100% - 2*16px);
         padding-left: 16px;
         padding-right: 16px;
         min-height: 42px;
