--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,22 +1,23 @@
 .intro__list {
-    font-family: Inter;
-    font-style: normal;
     font-weight: 400;
     font-size: 12px;
     line-height: 18px;
     margin: 0;
     padding: 0;
     margin-top: 33px;
+    margin-left: 6px;
     min-width: 690px;
     list-style: none;
-    align-self: flex-end;
+    align-self: flex-start;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1279px) {
     .intro__list {
-        min-width: 720px;
+        width: 100%;
+        margin-left: 0;
     }
 }
+
 @media screen and (max-width: 767px) {
     .intro__list {
         min-width: 288px;
