--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,22 +1,16 @@
 .intro__text {
-    font-family: Inter;
-    font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 26px;
-    max-width: 690px;
+    min-width: 690px;
+    width: 100%;
     margin: 0;
     margin-top: 40px;
     padding: 0;
 }
 
-@media screen and (max-width: 1023px) {
-    .intro__text {
-        max-width: 720px;
-    }
-}
 @media screen and (max-width: 767px) {
     .intro__text {
-        max-width: 288px;
+        min-width: 288px;
     }
 }
