--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,23 +1,16 @@
 .intro__title {
-    font-family: Inter;
-    font-style: normal;
     font-weight: 900;
     font-size: 54px;
     line-height: 58px;
     margin: 0;
     padding: 0;
-    max-width: 690px;
-}
-
-@media screen and (max-width: 1023px) {
-    .intro__title {
-        max-width: 720px;
-    }
+    min-width: 690px;
+    width: 100%;
 }
 
 @media screen and (max-width: 767px) {
     .intro__title {
-        max-width: 288px;
+        min-width: 288px;
         font-size: 32px;
         line-height: 35px;
     }
