--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,8 +1,8 @@
 .intro {
     min-width: 696px;
+    width: calc(100% - 100px - 388px);
     margin-top: 92px;
-    /* margin-left: 100px; */
-    margin-left: calc((100% - 984px)/2);
+    margin-left: 100px;
     align-self: flex-start;
     display: flex;
     flex-direction: column;
@@ -11,13 +11,13 @@
 @media screen and (max-width: 1279px) {
     .intro {
         min-width: 690px;
-        margin-left: calc((100% - 928px)/2);
+        margin-left: 48px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .intro {
-        min-width: 720px;
+        width: calc(100% - 2*24px);
         margin-left: 24px;
         margin-right: 24px;
         margin-top: 88px;
@@ -28,9 +28,9 @@
 @media screen and (max-width: 767px) {
     .intro {
         min-width: 288px;
+        width: calc(100% - 2*16px);
         margin-left: 16px;
         margin-right: 16px;
         margin-top: 64px;
-        align-self: center;
     }
 }
