--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,4 @@
 .lead__caption {
-    font-family: Inter;
-    font-style: normal;
     font-weight: 400;
     font-size: 10px;
     line-height: 14px;
@@ -9,18 +7,19 @@
     align-self: flex-start;
     margin: 8px 0 0 0;
     padding: 0;
-    max-width: 984px;
-    /* width: 100%; */
+    width: 100%;
 }
 
 @media screen and (max-width: 1023px) {
     .lead__caption {
         padding-left: 24px;
+        width: calc(100% - 24px);
     }
   }
 
   @media screen and (max-width: 767px) {
     .lead__caption {
         padding-left: 18px;
+        width: calc(100% - 18px);
     }
   }
