--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,6 +1,5 @@
 .lead__image {
-    /* max-width: 100%; */
-    max-width: 984px;
+    width: 100%;
     margin-top: 64px;
     object-fit: contain;
 }
@@ -8,20 +7,12 @@
 @media screen and (max-width: 1279px) {
     .lead__image {
         margin-top: 56px;
-        max-width: 928px;
-    }
-  }
-
-  @media screen and (max-width: 1023px) {
-    .lead__image {
-        margin-top: 56px;
-        max-width: 768px;
     }
   }
 
   @media screen and (max-width: 767px) {
     .lead__image {
         margin-top: 40px;
-        max-width: 320px;
+        min-width: 320px;
     }
   }
