--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,6 +1,4 @@
 .lead__title{
-    font-family: Inter;
-    /* font-style: normal; */
     font-weight: 900;
     font-size: 96px;
     line-height: 100px;
@@ -14,6 +12,6 @@
     .lead__title {
         font-size: 40px;
         line-height: 44px;
-        max-width: 288px;
+        min-width: 288px;
     }
   }
