--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,5 @@
 .lead{
-    /* width: calc(100% - 200px); */
-    min-width: 984px;
+    width: calc(100% - 2*100px);
     padding: 56px 0 0 0;
     margin: 0 100px 0 100px;
     display: flex;
@@ -12,22 +11,22 @@
 
 @media screen and (max-width: 1279px) {
     .lead {
-        padding: 48px 0 0 0;
-        min-width: 928px;
+        padding-top: 48px;
+        width: calc(100% - 2*48px);
+        margin-left: 48px;
+        margin-right: 48px;
     }
   }
 
   @media screen and (max-width: 1023px) {
     .lead {
-        padding: 48px 0 0 0;
         margin: 0;
-        min-width: 768px;
+        width: 100%;
     }
   }
 
   @media screen and (max-width: 767px) {
     .lead {
-        padding: 48px 0 0 0;
         min-width: 320px;
     }
   }
