--- a/blocks/main-content/main-content.css
+++ b/blocks/main-content/main-content.css
@@ -1,4 +1,5 @@
 .main-content {
+    width: 100%;
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -6,18 +7,6 @@
     box-sizing: border-box;
     align-items: center;
 }
-
-@media screen and (max-width: 1279px) {
-    .main-content {
-      max-width: 1024px;
-    }
-  }
-
-@media screen and (max-width: 1023px) {
-    .main-content {
-      max-width: 768px;
-    }
-  }
 
   @media screen and (max-width: 767px) {
     .main-content {
