--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,5 @@
 .page {
-    /* width: calc (1280px - 2*48px); */
-    min-width: calc (100% - 2*48px);
-    max-width: 1600px;
+    width: 100%;
     margin: 0 auto;
     padding-top: 28px;
     padding-left: 48px;
@@ -9,33 +7,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'Inter', Arial, sans-serif;
+    font-family: Inter, Arial, sans-serif;
+    font-style: normal;
     color: white;
     background-color: #2A2C2F;
     box-sizing: border-box;
-    /* -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%; */
   }
 
-  @media screen and (max-width: 1023px) {
+  @media screen and (max-width: 1279px) {
     .page {
-      min-width: 768px;
       padding-left: 0;
       padding-right: 0;
-      /* margin: 0; */
     }
   }
 
   @media screen and (max-width: 767px) {
     .page {
       min-width: 320px;
-      padding-left: 0;
-      padding-right: 0;
       padding-top: 16px;
-      /* margin: 0; */
     }
   }
 
