--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,5 @@
 .photo-grid {
-    /* width: 100%; */
-    max-width: 1184px;
+    width: 100%;
     display: grid;
     gap: 16px;
     grid-template-columns: repeat(4, calc((100% - 3*16px)/4));
@@ -10,7 +9,9 @@
 
 @media screen and (max-width: 1279px) {
     .photo-grid {
-        max-width: 928px;
+        width: calc(100% - 2*48px);
+        margin-left: 48px;
+        margin-right: 48px;
         gap: 14px;
         grid-template-columns: repeat(3, calc((100% - 2*14px)/3));
         grid-template-rows: repeat(4, minmax(min-content, max-content));
@@ -19,7 +20,9 @@
 
   @media screen and (max-width: 1023px) {
     .photo-grid {
-        max-width: 720px;
+        width: calc(100% - 2*24px);
+        margin-left: 24px;
+        margin-right: 24px;
         gap: 16px;
         grid-template-columns: repeat(2, calc((100% - 16px)/2));
         grid-template-rows: repeat(6, minmax(min-content, max-content));
@@ -29,9 +32,11 @@
 
   @media screen and (max-width: 767px) {
     .photo-grid {
-        max-width: 288px;
+        min-width: 288px;
+        width: calc(100% - 2*16px);
+        margin-left: 16px;
+        margin-right: 16px;
         gap: 12px;
-        /* grid-template-columns: repeat(2, calc((100% - 16px)/2)); */
         grid-template-columns: 100%;
         grid-template-rows: repeat(12, minmax(min-content, max-content));
         margin-top: 64px;
