--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,8 +2,6 @@
     margin: 0 0 26px 0;
     padding: 0;
     grid-area: paragraph;
-    font-family: Inter;
-    font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 29px;
@@ -22,9 +20,7 @@
 
   @media screen and (max-width: 767px) {
     .place__paragraph {
-        font-size: 16px;
-        line-height: 26px;
-        max-width: 288px;
+        width: 100%;
         justify-self: center;
         margin-bottom: 25px;
     }
