--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -5,7 +5,10 @@
 
 @media screen and (max-width: 767px) {
     .place__paragraphs {
-        max-width: 288px;
+        min-width: 288px;
+        width: calc(100% - 2*16px);
+        margin-left: 16px;
+        margin-right: 16px;
         justify-self: center;
     }
   }
