--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,6 +1,4 @@
 .place__title {
-    font-family: Inter;
-    font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
@@ -26,7 +24,8 @@
 
   @media screen and (max-width: 767px) {
     .place__title {
-        width: 288px;
+        min-width: 288px;
+        width: calc(100% - 2*16px);
         font-size: 32px;
         line-height: 35px;
         margin-left: 16px;
