--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -5,7 +5,8 @@
 
 @media screen and (max-width: 767px) {
     .place__website {
-        width: 288px;
+        min-width: 288px;
+        width: calc(100% - 2*16px);
         margin-left: 16px;
         margin-right: 16px;
     }
