--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,10 +1,7 @@
 .place {
-    /* width: calc(100vw - 2*148px - 40px); */
     width: 100%;
     display: grid;
     grid-template-columns: 460px minmax(min-content, max-content);
-    /* grid-template-columns: 460px 1fr; */
-    /* grid-template-rows: minmax(min-content, max-content) 460px; */
     grid-template-rows: minmax(min-content, max-content) 1fr;
     grid-template-areas:
       "title website"
@@ -24,14 +21,13 @@
   .place {
     grid-template-columns: 340px minmax(min-content, max-content);
     gap: 48px 28px;
-    max-width: 720px;
     margin-bottom: 72px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .place {
-    grid-template-columns: 320px;
+    grid-template-columns: 1fr;
     grid-template-rows: repeat (4, minmax(min-content, max-content));
     grid-template-areas:
       "title"
@@ -39,7 +35,7 @@
       "image"
       "paragraph";
     gap: 32px;
-    max-width: 320px;
+    min-width: 320px;
     margin-bottom: 50px;
   }
 }
