--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,4 @@
 .places {
-    /* width: calc(100% - 200px); */
     max-width: 984px;
     margin: 92px 100px 0 100px;
     display: flex;
@@ -8,15 +7,15 @@
 
 @media screen and (max-width: 1279px) {
     .places{
-        max-width: 928px;
-        margin: 92px 0 0 0;
+        margin: 92px 48px 0 48px;
+        width: calc(100% - 2*48px);
     }
     
 }
 
 @media screen and (max-width: 1023px) {
     .places{
-        max-width: 720px;
+        width: calc(100% - 2*24px);
         margin: 88px 24px 0 24px;
     }
     
@@ -24,7 +23,7 @@
 
 @media screen and (max-width: 767px) {
     .places{
-        max-width: 320px;
+        min-width: 320px;
         margin: 64px 0 0 0;
     }
     
